[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "archiverse"
version = "0.1.2"
description = "All-in-one CLI archiver for Weverse communities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.28.0",
  "rich>=13.0",
  "xmltodict>=0.13.0",
  "pywidevine>=1.0.0",
  "filedate>=2.0.0",
  "piexif>=1.1.3",
  "tzdata>=2025.1",
  "streamlink>=8.2.1",
]

[project.scripts]
archiverse = "archiverse:main"

[tool.hatch.build]
include = [
  "archiverse/**/*.py",
  "README.md",
  "CHANGELOG.md",
  "config.yaml.template",
]

